# yolo

./: .gitignore  LICENSE  README.md
yolo-game/: Cargo.toml  Makefile
yolo-game/parameters/: addAdmins.json  closeDeposit.json  deposit.json  getAdmins.json  getBalance.json  getScoreBoard.json  init.json  removeAdmins.json  send.json
yolo-game/schema/: yolo.json
yolo-game/schema/raw/: execute.json  instantiate.json  migrate.json  query.json  response_to_get_score_board.json  response_to_get_votes.json
yolo-game/scripts/testnet/deploy/: deploy.sh
yolo-game/scripts/testnet/execute/: addAdmins.sh  closeDeposit.sh  deposit.sh  removeAdmins.sh  send.sh
yolo-game/scripts/testnet/init/: init.sh
yolo-game/scripts/testnet/migrate/: migrate.sh
yolo-game/scripts/testnet/query/: getAdmins.sh  getBalance.sh  getScoreBoard.sh
yolo-game/src/: enums.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs  structs.rs  tests.rs
yolo-game/src/contract/: execute.rs  init.rs  migrate.rs  mod.rs  query.rs
